# project_run

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app_run/: models.py  pagination.py  serializers.py  urls.py  views.py
app_run/migrations/: 0001_initial.py  0002_run_status.py  0003_athleteinfo.py  0004_challenge.py  0005_position.py  0006_run_distance.py  0007_collectibleitem.py  0008_collectibleitem_collected_by.py  0009_position_date_time_run_run_time_seconds.py  0010_position_distance_position_speed_run_speed.py  0011_challengecomplete.py  0011_run_finish_time_run_start_time.py  0012_run_finish_time_run_start_time.py  0012_subscribe.py  0013_delete_challengecomplete.py  0013_subscribe_rating.py
app_run/tests/: test_company_details.py  test_positions_api.py  test_run_status_flow.py  test_runs_api.py
config/: urls.py
config/settings/: base.py  production.py
project_run/: urls.py
project_run/settings/: base.py
runs/: admin.py  apps.py  models.py  urls.py  views.py
runs/migrations/: 0001_initial.py
runs/tests/: test_positions_api.py  test_run_status_flow.py
